--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/app.css">
+        <link href="//mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" />
         <link rel="shortcut icon" href="/favicon.ico">
         <title>BrazilJS</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <div class="container">
+            <a href="http://mozilla.org/" id="tabzilla">mozilla</a>
+        </div>
+        <header id="masthead">
+            <div class="container">
+                <h1>BrazilJS</h1>
+            </div>
+        </header>
+        <div class="container" id="main">
+            <p>Content</p>
+        </div>
+        <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
     </body>
 </html>
