--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </div>
         <header id="masthead">
             <div class="container">
-                <h1>BrazilJS</h1>
+                <img src="/img/logo.png">
             </div>
         </header>
         <div class="container" id="main">
