--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,12 @@
             <a href="http://mozilla.org/" id="tabzilla">mozilla</a>
         </div>
         <header id="masthead" class="totalv">
-            <div class="container">
-                <img src="/img/logo.png">
-                <h1>Mozilla no BrazilJS</h1>
+            <div class="mozilla">
+                <img src="/img/logo-mozilla.png">
                 <h2>Start turning your dreams into virtual realities</h2>
+            </div>
+            <div class="foxy">
+                <img src="img/foxy.png">
             </div>
         </header>
         <section class="totalv ptop" id="schedule">
