--- a/public/index.html
+++ b/public/index.html
@@ -179,14 +179,14 @@
 
                     <div class="item">
                         <div class="content">
-                            <img src="/img/people/brenno.jpg">
+                            <img src="http://www.gravatar.com/avatar/0000000000?s=350&d=mm&r=x">
                             <h2>Brenno Leal</h2>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="content">
-                            <img src="/img/people/maicon.jpg">
+                            <img src="http://www.gravatar.com/avatar/0000000000?s=350&d=mm&r=x">
                             <h2>Maicon Ferreira</h2>
                             <ul class="links">
                                 <li><a href="https://github.com/maiconrcf"><i class="fa fa-github"></i></a></li>
